src/decklinkcapi/cpp/decklinkcapi.h

class IDeckLinkDisplayModeIterator;
class IDeckLinkOutput;
class IDeckLinkProfileAttributes;
typedef void IDeckLinkDisplayModeIterator;
typedef void IDeckLinkOutput;
typedef void IDeckLinkProfileAttributes;
CAPI bool IDeckLinkProfileAttributes_IsActive(IDeckLinkProfileAttributes* attributes);
CAPI bool IDeckLinkProfileAttributes_SupportsPlayback(IDeckLinkProfileAttributes* attributes);
CAPI IDeckLinkDisplayModeIterator* IDeckLinkOutput_GetDisplayModeIterator(IDeckLinkOutput* output);
CAPI bool IDeckLinkOutput_DoesSupportVideoMode(IDeckLinkOutput* output, int mode, int pixelFormat);
CAPI bool IDeckLinkOutput_EnableVideoOutput(IDeckLinkOutput* output, int mode);
CAPI bool IDeckLinkOutput_DisableVideoOutput(IDeckLinkOutput* output);
CAPI bool IDeckLinkOutput_StartScheduledPlayback(IDeckLinkOutput* output, long long startTime, long long timeScale, double speed);