src/main/java/com/loadingbyte/cinecred/natives/decklinkcapi/decklinkcapi_h.java


    /**
     * {@snippet lang=c :
     * _Bool IDeckLinkProfileAttributes_IsActive(IDeckLinkProfileAttributes *attributes)
     * }
     */
    public static boolean IDeckLinkProfileAttributes_IsActive(MemorySegment attributes) {
        var mh$ = IDeckLinkProfileAttributes_IsActive.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("IDeckLinkProfileAttributes_IsActive", attributes);
            }
            return (boolean)mh$.invokeExact(attributes);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class IDeckLinkProfileAttributes_SupportsPlayback {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            decklinkcapi_h.C_BOOL,
            decklinkcapi_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("IDeckLinkProfileAttributes_SupportsPlayback");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * _Bool IDeckLinkProfileAttributes_SupportsPlayback(IDeckLinkProfileAttributes *attributes)
     * }
     */
    public static FunctionDescriptor IDeckLinkProfileAttributes_SupportsPlayback$descriptor() {
        return IDeckLinkProfileAttributes_SupportsPlayback.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * _Bool IDeckLinkProfileAttributes_SupportsPlayback(IDeckLinkProfileAttributes *attributes)
     * }
     */
    public static MethodHandle IDeckLinkProfileAttributes_SupportsPlayback$handle() {
        return IDeckLinkProfileAttributes_SupportsPlayback.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * _Bool IDeckLinkProfileAttributes_SupportsPlayback(IDeckLinkProfileAttributes *attributes)
     * }
     */
    public static MemorySegment IDeckLinkProfileAttributes_SupportsPlayback$address() {
        return IDeckLinkProfileAttributes_SupportsPlayback.ADDR;
    }

    /**
     * {@snippet lang=c :
     * _Bool IDeckLinkProfileAttributes_SupportsPlayback(IDeckLinkProfileAttributes *attributes)
     * }
     */
    public static boolean IDeckLinkProfileAttributes_SupportsPlayback(MemorySegment attributes) {
        var mh$ = IDeckLinkProfileAttributes_SupportsPlayback.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("IDeckLinkProfileAttributes_SupportsPlayback", attributes);
            }
            return (boolean)mh$.invokeExact(attributes);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class IDeckLinkOutput_GetDisplayModeIterator {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            decklinkcapi_h.C_POINTER,
            decklinkcapi_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("IDeckLinkOutput_GetDisplayModeIterator");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * IDeckLinkDisplayModeIterator *IDeckLinkOutput_GetDisplayModeIterator(IDeckLinkOutput *output)
     * }
     */
    public static FunctionDescriptor IDeckLinkOutput_GetDisplayModeIterator$descriptor() {
        return IDeckLinkOutput_GetDisplayModeIterator.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * IDeckLinkDisplayModeIterator *IDeckLinkOutput_GetDisplayModeIterator(IDeckLinkOutput *output)
     * }
     */
    public static MethodHandle IDeckLinkOutput_GetDisplayModeIterator$handle() {
        return IDeckLinkOutput_GetDisplayModeIterator.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * IDeckLinkDisplayModeIterator *IDeckLinkOutput_GetDisplayModeIterator(IDeckLinkOutput *output)
     * }
     */
    public static MemorySegment IDeckLinkOutput_GetDisplayModeIterator$address() {
        return IDeckLinkOutput_GetDisplayModeIterator.ADDR;
    }

    /**
     * {@snippet lang=c :
     * IDeckLinkDisplayModeIterator *IDeckLinkOutput_GetDisplayModeIterator(IDeckLinkOutput *output)
     * }
     */
    public static MemorySegment IDeckLinkOutput_GetDisplayModeIterator(MemorySegment output) {
        var mh$ = IDeckLinkOutput_GetDisplayModeIterator.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("IDeckLinkOutput_GetDisplayModeIterator", output);
            }
            return (MemorySegment)mh$.invokeExact(output);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class IDeckLinkOutput_DoesSupportVideoMode {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            decklinkcapi_h.C_BOOL,
            decklinkcapi_h.C_POINTER,
            decklinkcapi_h.C_INT,
            decklinkcapi_h.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("IDeckLinkOutput_DoesSupportVideoMode");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * _Bool IDeckLinkOutput_DoesSupportVideoMode(IDeckLinkOutput *output, int mode, int pixelFormat)
     * }
     */
    public static FunctionDescriptor IDeckLinkOutput_DoesSupportVideoMode$descriptor() {
        return IDeckLinkOutput_DoesSupportVideoMode.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * _Bool IDeckLinkOutput_DoesSupportVideoMode(IDeckLinkOutput *output, int mode, int pixelFormat)
     * }
     */
    public static MethodHandle IDeckLinkOutput_DoesSupportVideoMode$handle() {
        return IDeckLinkOutput_DoesSupportVideoMode.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * _Bool IDeckLinkOutput_DoesSupportVideoMode(IDeckLinkOutput *output, int mode, int pixelFormat)
     * }
     */
    public static MemorySegment IDeckLinkOutput_DoesSupportVideoMode$address() {
        return IDeckLinkOutput_DoesSupportVideoMode.ADDR;
    }

    /**
     * {@snippet lang=c :
     * _Bool IDeckLinkOutput_DoesSupportVideoMode(IDeckLinkOutput *output, int mode, int pixelFormat)
     * }
     */
    public static boolean IDeckLinkOutput_DoesSupportVideoMode(MemorySegment output, int mode, int pixelFormat) {
        var mh$ = IDeckLinkOutput_DoesSupportVideoMode.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("IDeckLinkOutput_DoesSupportVideoMode", output, mode, pixelFormat);
            }
            return (boolean)mh$.invokeExact(output, mode, pixelFormat);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class IDeckLinkOutput_EnableVideoOutput {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            decklinkcapi_h.C_BOOL,
            decklinkcapi_h.C_POINTER,
            decklinkcapi_h.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("IDeckLinkOutput_EnableVideoOutput");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * _Bool IDeckLinkOutput_EnableVideoOutput(IDeckLinkOutput *output, int mode)
     * }
     */
    public static FunctionDescriptor IDeckLinkOutput_EnableVideoOutput$descriptor() {
        return IDeckLinkOutput_EnableVideoOutput.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * _Bool IDeckLinkOutput_EnableVideoOutput(IDeckLinkOutput *output, int mode)
     * }
     */
    public static MethodHandle IDeckLinkOutput_EnableVideoOutput$handle() {
        return IDeckLinkOutput_EnableVideoOutput.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * _Bool IDeckLinkOutput_EnableVideoOutput(IDeckLinkOutput *output, int mode)
     * }
     */
    public static MemorySegment IDeckLinkOutput_EnableVideoOutput$address() {
        return IDeckLinkOutput_EnableVideoOutput.ADDR;
    }

    /**
     * {@snippet lang=c :
     * _Bool IDeckLinkOutput_EnableVideoOutput(IDeckLinkOutput *output, int mode)
     * }
     */
    public static boolean IDeckLinkOutput_EnableVideoOutput(MemorySegment output, int mode) {
        var mh$ = IDeckLinkOutput_EnableVideoOutput.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("IDeckLinkOutput_EnableVideoOutput", output, mode);
            }
            return (boolean)mh$.invokeExact(output, mode);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class IDeckLinkOutput_DisableVideoOutput {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            decklinkcapi_h.C_BOOL,
            decklinkcapi_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("IDeckLinkOutput_DisableVideoOutput");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * _Bool IDeckLinkOutput_DisableVideoOutput(IDeckLinkOutput *output)
     * }
     */
    public static FunctionDescriptor IDeckLinkOutput_DisableVideoOutput$descriptor() {
        return IDeckLinkOutput_DisableVideoOutput.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * _Bool IDeckLinkOutput_DisableVideoOutput(IDeckLinkOutput *output)
     * }
     */
    public static MethodHandle IDeckLinkOutput_DisableVideoOutput$handle() {
        return IDeckLinkOutput_DisableVideoOutput.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * _Bool IDeckLinkOutput_DisableVideoOutput(IDeckLinkOutput *output)
     * }
     */
    public static MemorySegment IDeckLinkOutput_DisableVideoOutput$address() {
        return IDeckLinkOutput_DisableVideoOutput.ADDR;
    }

    /**
     * {@snippet lang=c :
     * _Bool IDeckLinkOutput_DisableVideoOutput(IDeckLinkOutput *output)
     * }
     */
    public static boolean IDeckLinkOutput_DisableVideoOutput(MemorySegment output) {
        var mh$ = IDeckLinkOutput_DisableVideoOutput.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("IDeckLinkOutput_DisableVideoOutput", output);
            }
            return (boolean)mh$.invokeExact(output);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class IDeckLinkOutput_StartScheduledPlayback {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            decklinkcapi_h.C_BOOL,
            decklinkcapi_h.C_POINTER,
            decklinkcapi_h.C_LONG_LONG,
            decklinkcapi_h.C_LONG_LONG,
            decklinkcapi_h.C_DOUBLE
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("IDeckLinkOutput_StartScheduledPlayback");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }
